--- a/src/app/features/crm/components/division/division.component.html
+++ b/src/app/features/crm/components/division/division.component.html
@@ -202,10 +202,10 @@
               </ng-template>
               <ng-template pTemplate="body" let-branch>
                 <tr>
-                  <td class="body">{{ branch.name }}</td>
+                  <td class="body">{{ branch.divisionName }}</td>
                   <td class="body">{{ branch.branchName }}</td>
-                  <td class="body">{{ branch.wef }}</td>
-                  <td class="body">{{ branch.wet }}</td>
+                  <td class="body">{{ branch.withEffectiveFrom }}</td>
+                  <td class="body">{{ branch.withEffectiveTo }}</td>
                 </tr>
               </ng-template>
               <ng-template pTemplate="emptymessage">
