UI updates for claims

--- a/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
+++ b/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-5 mb-2">
   <div class="col-12">
-    <label class="text-primary">Exceptions</label>
+    <label class="text-primary fw-medium">Exceptions</label>
   </div>
   <div class="col-sm-12 col-md-6">
     <input
@@ -139,7 +139,7 @@
 
 <div class="row mt-5 mb-2 card">
   <div class="col-12 mt-2 mb-2">
-    <label class="text-primary">Receipts</label>
+    <label class="text-primary fw-medium">Receipts</label>
 
     <span class="icon-circle float-end"
           data-bs-toggle="collapse" href="#collapseReceipts" role="button" aria-expanded="false" aria-controls="collapseReceipts"
@@ -202,7 +202,7 @@
 
 <div class="row mt-5 mb-2 card" *ngIf="authorizationLevelsData?.length > 0">
   <div class="col-12 mt-2 mb-2">
-    <label class="text-primary">Authorization levels</label>
+    <label class="text-primary fw-medium">Authorization levels</label>
 
     <span class="icon-circle float-end"
           data-bs-toggle="collapse" href="#collapseAuth" role="button" aria-expanded="false" aria-controls="collapseAuth"
