--- a/src/app/features/administration/components/tickets/reinsurance-allocations/reinsurance-allocations.component.html
+++ b/src/app/features/administration/components/tickets/reinsurance-allocations/reinsurance-allocations.component.html
@@ -50,7 +50,7 @@
     <div class="card p-2">
       <div class="tab-content" id="ex1-content">
         <div class="tab-pane fade show active" id="ex1-tabs-1" role="tabpanel" aria-labelledby="ex1-tab-1">
-          <label class="text-primary mb-2">{{'mngt_wrkflw.reinsurance.treatyRiskCeding' | translate }}</label>
+          <label class="text-primary mb-2 fw-medium">{{'mngt_wrkflw.reinsurance.treatyRiskCeding' | translate }}</label>
           <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
@@ -589,7 +589,7 @@
 
         </div>
         <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-          <label class="text-primary mb-2">{{'mngt_wrkflw.reinsurance.previousCeding' | translate }}</label>
+          <label class="text-primary mb-2 fw-medium">{{'mngt_wrkflw.reinsurance.previousCeding' | translate }}</label>
           <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
@@ -635,7 +635,7 @@
             </ng-template>
           </p-table>
 
-          <label class="text-primary mt-5 mb-2">{{'mngt_wrkflw.reinsurance.treatyCessions' | translate }}</label>
+          <label class="text-primary mt-5 mb-2 fw-medium">{{'mngt_wrkflw.reinsurance.treatyCessions' | translate }}</label>
           <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
@@ -675,7 +675,7 @@
             </ng-template>
           </p-table>
 
-          <label class="text-primary mt-5 mb-2">{{'mngt_wrkflw.reinsurance.facreSessions' | translate }}</label>
+          <label class="text-primary mt-5 mb-2 fw-medium">{{'mngt_wrkflw.reinsurance.facreSessions' | translate }}</label>
           <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
@@ -718,7 +718,7 @@
           </p-table>
         </div>
         <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
-          <label class="text-primary mb-2">{{'mngt_wrkflw.reinsurance.treatySetup' | translate }}</label>
+          <label class="text-primary mb-2 fw-medium">{{'mngt_wrkflw.reinsurance.treatySetup' | translate }}</label>
           <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
@@ -769,7 +769,7 @@
           </p-table>
         </div>
         <div class="tab-pane fade" id="ex1-tabs-4" role="tabpanel" aria-labelledby="ex1-tab-4">
-          <label class="text-primary mb-2">{{'mngt_wrkflw.reinsurance.policyFacreCeding' | translate }}</label>
+          <label class="text-primary mb-2 fw-medium">{{'mngt_wrkflw.reinsurance.policyFacreCeding' | translate }}</label>
           <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [autoLayout]="true"
