--- a/src/app/features/administration/components/tickets/ticket-details/ticket-documents/ticket-documents.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-documents/ticket-documents.component.html
@@ -5,7 +5,7 @@
   currentTicket?.ticket?.sysModule === 'Q'">
   <div class="row mt-3 mb-2 card">
     <div class="col-12 mt-2 mb-2">
-      <label class="text-primary">Dispatched documents</label>
+      <label class="text-primary fw-medium">Dispatched documents</label>
 
       <span class="icon-circle float-end"
             data-bs-toggle="collapse" href="#collapseDispatchDocs" role="button" aria-expanded="false" aria-controls="collapseDispatchDocs"
@@ -23,7 +23,7 @@
 
   <div class="row mt-3 mb-2 card">
     <div class="col-12 mt-2 mb-2">
-      <label class="text-primary">Documents</label>
+      <label class="text-primary fw-medium">Documents</label>
 
       <span class="icon-circle float-end"
             data-bs-toggle="collapse" href="#collapseDocs" role="button" aria-expanded="false" aria-controls="collapseDocs"
@@ -43,7 +43,7 @@
 <ng-container *ngIf="currentTicket?.ticket?.sysModule === 'C'">
   <div class="row mt-3 mb-2 card">
     <div class="col-12 mt-2 mb-2">
-      <label class="text-primary">Claimant Documents</label>
+      <label class="text-primary fw-medium">Claimant Documents</label>
 
       <span class="icon-circle float-end"
             data-bs-toggle="collapse" href="#collapseClaimant" role="button" aria-expanded="false" aria-controls="collapseClaimant"
@@ -61,7 +61,7 @@
 
   <div class="row mt-3 mb-2 card">
     <div class="col-12 mt-2 mb-2">
-      <label class="text-primary">Service Provider Documents</label>
+      <label class="text-primary fw-medium">Service Provider Documents</label>
 
       <span class="icon-circle float-end"
             data-bs-toggle="collapse" href="#collapseServProv" role="button" aria-expanded="false" aria-controls="collapseServProv"
@@ -80,7 +80,7 @@
 
 <div class="row mt-3 mb-2 card">
   <div class="col-12 mt-2 mb-2">
-    <label class="text-primary">Client documents</label>
+    <label class="text-primary fw-medium">Client documents</label>
 
     <span class="icon-circle float-end"
           data-bs-toggle="collapse" href="#collapseClientDocs" role="button" aria-expanded="false" aria-controls="collapseClientDocs"
