--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.css
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.css
@@ -1,10 +1,15 @@
 .ticketLabel {
   margin-right: 10px;
-  /*width: 140px;*/
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
 }
 
 .ticketDesc {
-  font-weight: bold;
+  font-size: 16px;
+  font-weight: 700;
+  color: #000000;
+  margin-left: 5px;
 }
 
 .risks, .taxes {
