--- a/src/app/features/administration/components/tickets/ticket-details/claim-details/claim-details.component.css
+++ b/src/app/features/administration/components/tickets/ticket-details/claim-details/claim-details.component.css
@@ -12,8 +12,14 @@
 }
 .ticketLabel {
   margin-right: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
 }
 
 .ticketDesc {
-  font-weight: bold;
+  font-size: 16px;
+  font-weight: 700;
+  color: #000000;
+  margin-left: 5px;
 }
