VQ-1756/Valuations APi consumption

--- a/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.css
@@ -289,6 +289,10 @@ td:first-child {
     margin-right: 0; /* Override the margin-right for label set elswhere */
 }
 
+#table-align {
+    text-align: right;
+}
+
 @media (max-width: 1200px) {
 
     .container,
